--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <table border ="2" height="200" width="300">
         <tr>
-            <th>order list</th>
-            <th>unorderlist</th>
+            <th>fruits</th>
+            <th>vegetables</th>
             </tr>
             <tr>
                 <td><ol>
@@ -19,13 +19,11 @@
                 </ol>
             </td>
             <td><ul>
-                <li>apples</li>
-                <li>bananas</li>
-                <li>grapes</li>
+                <li>carrot</li>
+                <li>beans</li>
+                <li>potato</li>
             </ul></td>
         </tr>
     </table>
-
-
 </body>
 </html>
